Finish set up JSON code generation and rudimentary SharedPreferences saving

--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation:
-  # shared_preferences:
+  shared_preferences:
 
 
   # The following adds the Cupertino Icons font to your application.
