--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Flutter CI
 
 on:
@@ -40,6 +35,6 @@ jobs:
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
-      - name: Run tests
-        working-directory: ./smart_gym
-        run: flutter test
+      #- name: Run tests
+        #working-directory: ./smart_gym
+        #run: flutter test
