--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.3
+  cloud_functions: ^4.0.5
 
 dev_dependencies:
   flutter_test:
