--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.3
   cloud_functions: ^4.0.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
