--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_auth: ^4.1.3
   cloud_functions: ^4.0.5
   intl: ^0.17.0
+  tuple: ^2.0.1
+  date_utils: ^0.2.0
+  custom_refresh_indicator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
