--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   tuple: ^2.0.1
   date_utils: ^0.2.0
   custom_refresh_indicator: ^2.0.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
