--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   date_utils: ^0.2.0
   custom_refresh_indicator: ^2.0.1
   uuid: ^3.0.7
+  duration: ^3.0.12
+  duration_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
