--- a/smart_gym/pubspec.yaml
+++ b/smart_gym/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   uuid: ^3.0.7
   duration: ^3.0.12
   duration_picker: ^1.1.1
+  statistics: ^1.0.23
 
 dev_dependencies:
   flutter_test:
